[package]
name = "jcm_bot_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = "0.7.1"
anyhow = "1"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = "0.3.15"
rust-i18n = "3"
scraper = "0.19.0"
rusqlite = "0.30.0"
